compiler/gov/llnl/babel/parsers/sidl2/SIDLParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. SIDLParser.java */
package gov.llnl.babel.parsers.sidl2;

public class SIDLParser/*@bgen(jjtree)*/implements SIDLParserTreeConstants, SIDLParserConstants {/*@bgen(jjtree)*/
  protected JJTSIDLParserState jjtree = new JJTSIDLParserState();

  final public ParseTreeNode Start() throws ParseException {
                             /*@bgen(jjtree) Start */
  ParseTreeNode jjtn000 = new ParseTreeNode(this, JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case REQUIRE:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        Require();
      }
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IMPORT:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        Import();
      }
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CLASS:
        case ENUM:
        case STRUCT:
        case INTERFACE:
        case ABSTRACT:
        case FINAL:
        case PACKAGE:
        case ATTRIB_BEGIN:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_3;
        }
        UserType();
      }
      jj_consume_token(0);
                                                        jjtree.closeNodeScope(jjtn000, true);
                                                        jjtc000 = false;
                                                        {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public void Version() throws ParseException {
                  /*@bgen(jjtree) Version */
  ParseTreeNode jjtn000 = new ParseTreeNode(this, JJTVERSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(VERSION);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VERSION_STRING:
        jj_consume_token(VERSION_STRING);
        break;
      case SIMPLE_FLOATING_POINT_LITERAL:
        jj_consume_token(SIMPLE_FLOATING_POINT_LITERAL);
        break;
      case DECIMAL_LITERAL:
        jj_consume_token(DECIMAL_LITERAL);
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.name=token.image;
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Require() throws ParseException {
                  /*@bgen(jjtree) Require */
  ParseTreeNode jjtn000 = new ParseTreeNode(this, JJTREQUIRE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(REQUIRE);
      ScopedID();
      Version();
      jj_consume_token(SEMICOLON);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Import() throws ParseException {
                 /*@bgen(jjtree) Import */
  ParseTreeNode jjtn000 = new ParseTreeNode(this, JJTIMPORT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IMPORT);
      ScopedID();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VERSION:
        Version();
        break;
      default:
        jj_la1[4] = jj_gen;
        ;
      }
      jj_consume_token(SEMICOLON);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Package() throws ParseException {
                  /*@bgen(jjtree) Package */
  ParseTreeNode jjtn000 = new ParseTreeNode(this, JJTPACKAGE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(PACKAGE);
      Name();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VERSION:
        Version();
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      jj_consume_token(LBRACE);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CLASS:
        case ENUM:
        case STRUCT:
        case INTERFACE:
        case ABSTRACT:
        case FINAL:
        case PACKAGE:
        case ATTRIB_BEGIN:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_4;
        }
        UserType();
      }
      jj_consume_token(RBRACE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEMICOLON:
        jj_consume_token(SEMICOLON);
        break;
      default:
        jj_la1[7] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

  final public void UserType() throws ParseException {
                   /*@bgen(jjtree) UserType */
  ParseTreeNode jjtn000 = new ParseTreeNode(this, JJTUSERTYPE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ABSTRACT:
      case FINAL:
      case ATTRIB_BEGIN:
      ParseTreeNode jjtn001 = new ParseTreeNode(this, JJTTYPEATTRS);
      boolean jjtc001 = true;
      jjtree.openNodeScope(jjtn001);
        try {
          label_5:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case ABSTRACT:
            case FINAL:
              TypeAttr();
              break;
            case ATTRIB_BEGIN:
              CustomAttrList();
              break;
            default:
              jj_la1[8] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case ABSTRACT:
            case FINAL:
            case ATTRIB_BEGIN:
              ;
              break;
            default:
              jj_la1[9] = jj_gen;
              break label_5;
            }
          }
        } catch (Throwable jjte001) {
      if (jjtc001) {
        jjtree.clearNodeScope(jjtn001);
        jjtc001 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte001 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte001;}
      }
      if (jjte001 instanceof ParseException) {
        {if (true) throw (ParseException)jjte001;}
      }
      {if (true) throw (Error)jjte001;}
        } finally {
      if (jjtc001) {
        jjtree.closeNodeScope(jjtn001, true);
      }
        }
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        Class();
        break;
      case INTERFACE:
        Interface();
        break;
      case PACKAGE:
        Package();
        break;
      case STRUCT:
        Struct();
        break;
      case ENUM:
        Enum();
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void TypeAttr() throws ParseException {
                   /*@bgen(jjtree) TypeAttr */
  ParseTreeNode jjtn000 = new ParseTreeNode(this, JJTTYPEATTR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FINAL:
        jj_consume_token(FINAL);
        break;
      case ABSTRACT:
        jj_consume_token(ABSTRACT);
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Enum() throws ParseException {
               /*@bgen(jjtree) Enum */
  ParseTreeNode jjtn000 = new ParseTreeNode(this, JJTENUM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(ENUM);
      Name();
      jj_consume_token(LBRACE);
      Enumerator();
      label_6:
      while (true) {
        if (jj_2_1(2)) {
          ;
        } else {
          break label_6;
        }
        jj_consume_token(COMMA);
        Enumerator();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        jj_consume_token(COMMA);
        break;
      default:
        jj_la1[13] = jj_gen;
        ;
      }
      jj_consume_token(RBRACE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEMICOLON:
        jj_consume_token(SEMICOLON);
        break;
      default:
        jj_la1[14] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Enumerator() throws ParseException {
                     /*@bgen(jjtree) Enumerator */
  ParseTreeNode jjtn000 = new ParseTreeNode(this, JJTENUMERATOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Name();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASSIGN:
        jj_consume_token(ASSIGN);
        Integer();
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Struct() throws ParseException {
                 /*@bgen(jjtree) Struct */
  ParseTreeNode jjtn000 = new ParseTreeNode(this, JJTSTRUCT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(STRUCT);
      Name();
      jj_consume_token(LBRACE);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ARRAY:
        case RARRAY:
        case BOOLEAN:
        case CHAR:
        case DCOMPLEX:
        case DOUBLE:
        case FCOMPLEX:
        case FLOAT:
        case INT:
        case LONG:
        case OPAQUE:
        case STRING:
        case IDENTIFIER:
        case DOT:
          ;
          break;
        default:
          jj_la1[16] = jj_gen;
          break label_7;
        }
        StructItem();
      }
      jj_consume_token(RBRACE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEMICOLON:
        jj_consume_token(SEMICOLON);
        break;
      default:
        jj_la1[17] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }
